--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "6.24.1",
+    "bootstrap-4-grid": "^2.4.1",
     "css-loader": "0.28.4",
     "live-server": "^1.2.0",
     "node-sass": "^4.7.2",
